--- a/css/main.css
+++ b/css/main.css
@@ -56,7 +56,7 @@ header {
 }
 
 section form {
-  padding: 15em 1em 1em 1em;
+  padding: 35em 1em 1em 1em;
   font-size: 1.15em;
   width: 100%;
 }
@@ -251,18 +251,29 @@ nav a, nav a:visited {
 nav a.selected, nav a:hover {
   color: #32673f;
 }
-@media (min-width: 0) and (max-width: 768px) {
-  #gallery {
-      padding: 1.25em;
-    }
+@media (min-width: 0) and (max-width: 730px) {
 
+    #gallery {
+      height: 280px;
+      padding: 2.5em 1em 1em;
+      background-position: 0 -95px;
+    }
+    footer {
+      font-size: 0.75em;
+      text-align: center;
+      clear: both;
+      padding-top: 300px;
+      color: #ccc;
+    }
+}
 
 @media (min-width: 769px) {
-  #gallery {
+
+  /*#gallery {
     height: 280px;
     padding: 2.5em 1em 1em;
     background-position: 0 -95px;
-  }
+  }*/
   #gallery p {
     font-size: 3em;
   }
